# ElixirCore

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/ElixirCore/: AssetsLoader.hpp  AssetsManager.hpp  BinariesCommon.hpp  Common.hpp  DebugLine.hpp  FrameBuffer.hpp  Interactable.hpp  Keyboard.hpp  Light.hpp  LightComponent.hpp  LightManager.hpp  Logger.hpp  Macros.hpp  MainWindow.hpp  Material.hpp  Mouse.hpp  Physics.hpp  PluginManager.hpp  Raycasting.hpp  RigidbodyComponent.hpp  Scene.hpp  SceneManager.hpp  Script.hpp  ScriptComponent.hpp  ScriptsLoader.hpp  Shader.hpp  ShaderManager.hpp  ShadowHandler.hpp  SkeletalMesh.hpp  SkeletalMeshComponent.hpp  SkinnedModel.hpp  Skybox.hpp  StaticMesh.hpp  StaticMeshComponent.hpp  StaticModel.hpp  Text.hpp  Texture.hpp  Utilities.hpp
src/: Application.cpp  AssetsLoader.cpp  AssetsManager.cpp  DebugLine.cpp  FrameBuffer.cpp  LightComponent.cpp  LightManager.cpp  Logger.cpp  MainWindow.cpp  Material.cpp  Mouse.cpp  Physics.cpp  PluginManager.cpp  Raycasting.cpp  RigidbodyComponent.cpp  Scene.cpp  SceneManager.cpp  ScriptComponent.cpp  ScriptsLoader.cpp  Shader.cpp  ShaderManager.cpp  ShadowHandler.cpp  SkeletalMesh.cpp  SkeletalMeshComponent.cpp  SkinnedModel.cpp  Skybox.cpp  StaticMesh.cpp  StaticMeshComponent.cpp  StaticModel.cpp  Text.cpp  Texture.cpp  VertexArray.cpp  WindowsManager.cpp
